Contact option removed from Menu | Added link to project name on Portfolio section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="pt-4 clearfix">
-          <h1 class="site-title mb-0">Denny de Almeida Spinelli</h1>
+          <h1 class="site-title fw-light fs-1 mb-0">Welcome!</h1>
           <div class="site-nav"> 
             <!-- Menu options -->
             <nav role="navigation">
@@ -43,8 +43,6 @@
                 <li class="nav-item"><a class="nav-link" href="#education" title="Education"><span class="menu-title">Education</span></a>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#portfolio" title="Portfolio"><span class="menu-title">Portfolio</span></a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="#contact" title="Contact"><span class="menu-title">Contact</span></a>
                 </li>
               </ul>
             </nav>
@@ -301,7 +299,7 @@
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
           <div class="m-4 mt-md-2">
             <p class="text-teal text-small">Python / XGBoost / Heroku / Telegram Bot</p>
-            <h3>Rossmann Sales Prediction</h3>
+            <h3><a href="https://github.com/daSpinelli/Rossmann-Sales-Prediction" target="_blank" rel="noopener noreferrer">Rossmann Sales Prediction</a></h3>
             <p class="text-muted">This project creates a machine learning model to predict the sales for the next 6 months from a multi store company.</p>
             </ul>
           </div>
@@ -311,7 +309,7 @@
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
           <div class="m-4 mt-md-2 text-end">
             <p class="text-teal text-small">Python / Heroku / Streamlit</p>
-            <h3>House Rocket Insights</h3>
+            <h3><a href="https://github.com/daSpinelli/Python-Zero-DS" target="_blank" rel="noopener noreferrer">House Rocket Insights</a></h3>
             <p class="text-muted">This project provides insights through an exploratory data analysis (EDA) of a database from a company that buys and sells houses in Seattle WA, USA.</p>
           </div>
         </div>
@@ -322,7 +320,7 @@
         <div class="col-md-6 d-flex align-items-center" data-aos="fade-left" data-aos-delay="100">
           <div class="m-4 mt-md-2">
             <p class="text-teal text-small">Python / Embedding / GMM Model / Sillhouette Score</p>
-            <h3>Super Customers Clustering</h3>
+            <h3><a href="https://github.com/daSpinelli" target="_blank" rel="noopener noreferrer">Super Customers Clustering</a></h3>
             <p class="text-muted">This project will result in clusters (groups) of customers in a database from an e-commerce company. The goal of clustering this customers is to find out the ones who is ellegible to participate of a loyalty program, the super customers.</p>
           </div>
         </div>
@@ -334,7 +332,7 @@
     <footer class="pt-4 pb-4 text-muted text-center d-print-none">
       <div class="container">
         <div class="my-3">
-          <div class="h4">Denny de A. Spinelli</div>
+          <div class="h5 fw-light">Denny de A. Spinelli</div>
           <div class="footer-nav">
             <nav role="navigation">
               <ul class="nav justify-content-center">
