Minor changes on greeting text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="pt-4 clearfix">
-          <h1 class="site-title fw-light fs-1 mb-0">Welcome!</h1>
+          <h1 class="site-title fw-light fs-1 mb-0">Hello, World!</h1>
           <div class="site-nav"> 
             <!-- Menu options -->
             <nav role="navigation">
@@ -88,7 +88,7 @@
     <div class="about-section">
       <div class="row">
         <div class="col-md-6">
-          <h2 class="h2 fw-light mb-4">Hi There!</h2>
+          <h2 class="h2 fw-light mb-4">I am Denny! Nice to meet you!</h2>
           <p>I am graduated in System Analysis and Development. I am looking for a career change from finance to data cience. I love programming and I have always been passionate about artificial intelligence, so be able to do both and be paid for that is almost a dream.</p>
           <p>I love playing (video games, board games, sports) as much as I love traveling and programming.</p>
         </div>
