--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="pt-4 clearfix">
+          <!-- Greeting -->
           <h1 class="site-title fw-light fs-1 mb-0">Hello, World!</h1>
           <div class="site-nav"> 
             <!-- Menu options -->
