added resume download

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" id="menu-portfolio" href="#portfolio" title="Portfolio"><span class="menu-title">Portfolio</span></a>
                 </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="#" id="menu-resume" role="button">
+                    <span class="menu-title">Resume</span>
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="menu-resume">
+                    <a class="dropdown-item" href="files/resume_pt-br.pdf" download>Portuguese</a>
+                    <a class="dropdown-item" href="files/resume_en.pdf" download>English</a>
+                  </div>
+                </li>
               </ul>
             </nav>
           </div>
@@ -88,10 +97,29 @@
   <div class="shadow-1-strong bg-white my-5 p-5" id="about">
     <div class="about-section my-5">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 about-me">
           <h2 class="h2 fw-light mb-4">I am Denny! Nice to meet you!</h2>
-          <p>I am graduated in System Analysis and Development. I am looking for a career change from finance to data cience. I love programming and I have always been passionate about artificial intelligence, so be able to do both and be paid for that is almost a dream.</p>
-          <p>I love playing (video games, board games, sports) as much as I love traveling and programming.</p>
+          <p>I am a data science studying at Comunidade DS, where I participate in practical projects 
+              that simulate the everyday challenges of a data scientist. My focus includes exploratory data analysis, 
+              clustering, predictive algorithms, and more. I also study statistics, programming, databases, and business 
+              to have a solid foundation for solving business problems.
+          </p>
+          <p>
+            Leading the "Dados Inglórios" group in a Hackday was a personal milestone. We delivered a machine learning 
+              model in just two days, achieving over 80% accuracy, and I was able to contribute to the development of 
+              colleagues new to the data field. I believe in an incremental and cyclical approach to solving business 
+              problems, prioritizing quick delivery without compromising quality and theoretical foundations.
+          </p>
+          <p>
+            I have experience in creating SQL-based dashboards and management reports, focusing on sales, margins, 
+              inventory, and productivity. My goal is to work as a data scientist, applying data exploration, statistical 
+              analysis, machine learning models, and other software development tools. My background as a Business 
+              Intelligence consultant and Industrial Cost Analyst has helped me develop communication skills and work 
+              with internal and external clients.
+          </p>
+          <p>
+            Oh, I almost forgot I love playing (video games, board games, sports) as much as I love traveling and programming.
+          </p>
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
@@ -100,7 +128,7 @@
               <div class="pb-2 fw-bolder"><i class="far fa-calendar-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Age</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">31</div>
+              <div class="pb-2">32</div>
             </div>
             <div class="col-sm-4">
               <div class="pb-2 fw-bolder"><i class="fas fa-envelope-open-text pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Email</div>
@@ -347,6 +375,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts/mdb.min.js?ver=1.2.1"></script>
     <script src="scripts/aos.js?ver=1.2.1"></script>
     <script src="scripts/main.js?ver=1.2.1"></script>
